--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : "she/her or they/them"
   bio              : "tnv [five] [at] cornell [dot] edu"
   location         : "Seattle, WA"
-  employer         : "Cornell University"
+  employer         : "MIT"
   uri              : # URL
   email            : # Email
 
