--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.JPG"
   name             : "Tia Vu"
   pronouns         : "she/her or they/them"
-  bio              : "tnv [five] [at] cornell [dot] edu or [tiavu] [at] mit [dot] edu"
+  bio              : "tnv [five] [at] cornell [dot] edu or tiavu [at] mit [dot] edu"
   location         : "Seattle, WA"
   employer         : "MIT"
   uri              : # URL
