--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "profile.JPG"
   name             : "Tia Vu"
-  pronouns         : "she/her or they/them"
+  pronouns         : "they/them"
   bio              : "tiavu [at] mit [dot] edu"
   location         : "Seattle, WA"
   employer         : "MIT"
